asessment site baseed lessons on responsiveness

--- a/test work/index.html
+++ b/test work/index.html
@@ -9,14 +9,19 @@
   <body>
     <header>
       <div>
-        <img class="header__icon" src="images/avatar-default-svgrepo-com.svg" />
+        <img
+          class="header__icon"
+          alt=""
+          src="images/avatar-default-svgrepo-com.svg"
+        />
         BREEZ
-      </div>                                                                                                                                                                      
+      </div>
       <nav>
-        <button class="nav__button">
+        <button class="nav__button login-btn">
           <img
             class="header__icon"
             src="images/avatar-default-svgrepo-com.svg"
+            alt=""
           />
           Log in
         </button>
@@ -25,6 +30,7 @@
           <img
             class="header__icon"
             src="images/hamburger-menu-svgrepo-com.svg"
+            alt=""
           />
         </div>
       </nav>
@@ -41,10 +47,11 @@
               exercitationem quo quaerat. Provident, vero in?
             </p>
             <a>Try For Free</a>
-            <div class="nav__button">
+            <div class="nav__button">dev
               <img
                 class="header__icon"
                 src="images/avatar-default-svgrepo-com.svg"
+                alt=""
               />
               Checkout the livestream
             </div>
@@ -63,7 +70,7 @@
         </aside>
         <aside class="product__item">
           <div class="product__item_value">
-            <img src="images/rainbow.jpg" />
+            <img src="images/rainbow.jpg" alt="" />
             <h5>A Global Network Of Teachers</h5>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -73,7 +80,7 @@
             </p>
           </div>
           <div class="product__item_value">
-            <img src="images/celebrate.jpg" />
+            <img src="images/celebrate.jpg" alt="" />
             <h5>Different Styles For All Ages And Levels</h5>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -83,7 +90,7 @@
             </p>
           </div>
           <div class="product__item_value">
-            <img src="images/leaves.jpg" />
+            <img src="images/leaves.jpg" alt="" />
             <h5>Livestream Classes</h5>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -111,6 +118,7 @@
               <img
                 class="header__icon"
                 src="images/avatar-default-svgrepo-com.svg"
+                alt=""
               />
               Checkout the livestream
             </div>
@@ -118,27 +126,47 @@
         </aside>
       </section>
 
-      <section class="meditate">
-        <aside class="meditate__second"></aside>
-
-        <aside class="meditate__first_scale">
+      <section class="our-plans">
+        <aside class="our-plans__first">
           <div>
-            <h1>Mindfulness For Everyone Everywhere</h1>
+            <h1>Our Plans</h1>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quibusdam deleniti corporis velit laborum pariatur aperiam natus
-              delectus unde incidunt, fugiat aliquid explicabo qui quia
-              exercitationem quo quaerat. Provident, vero in?
+              Chose a clan and got a
+              <span class="text-carrot">14-day trial for free</span>
+              ency unimited access to our online classes and workshops
             </p>
-            <a>Try For Free</a>
-            <div class="nav__button">
-              <img
-                class="header__icon"
-                src="images/avatar-default-svgrepo-com.svg"
-              />
-              Checkout the livestream
-            </div>
+            <p>You can cancel at any time.</p>
           </div>
+        </aside>
+        <aside class="our-plans__second our-plans__second_scale">
+          <article class="our-plans__price-tag">
+            <header>
+              <h3>Monthly Plan</h3>
+              <hr />
+              <p>Cancel Anytime</p>
+            </header>
+            <main class="text-carrot">
+              <sup>$</sup>
+              29
+            </main>
+            <footer>
+              <a href="#">See more</a>
+            </footer>
+          </article>
+          <article class="our-plans__price-tag">
+            <header>
+              <h3>Yearly Plan</h3>
+              <hr />
+              <p>Limited Offer: 25% Off</p>
+            </header>
+            <main class="text-carrot">
+              <sup>$</sup>
+              250
+            </main>
+            <footer>
+              <a href="#">See more</a>
+            </footer>
+          </article>
         </aside>
       </section>
     </main>
