--- a/test work/index.html
+++ b/test work/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <img class="header__icon" src="images/avatar-default-svgrepo-com.svg" />
+        <img class="header__icon animate" src="images/avatar-default-svgrepo-com.svg" />
         BREEZ
       </div>                                                                                                                                                                      
       <nav>
