--- a/test work/index.html
+++ b/test work/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -142,5 +143,9 @@
         </aside>
       </section>
     </main>
+    <script>
+      const name = prompt("Hi what is your name?")
+      alert(`hi ${name}`)
+    </script>
   </body>
 </html>
