changes to slides and loops

--- a/week5/index.html
+++ b/week5/index.html
@@ -10,7 +10,7 @@
     <header id="site-header">
       <!-- top section -->
       <div id="site-header__top">
-        <span class="logo">OneSchool</span>
+        <span id="logo top" class="logo"> <em>Ivy League</em>OneSchool</span>
         <!-- mobile nav -->
         <nav id="mobile-nav">
           <ul>
@@ -61,5 +61,8 @@
         </form>
       </div>
     </header>
+    <footer>
+      <span class="logo bottom-text"> <em>Ivy League</em>OneSchool</span>
+    </footer>
   </body>
 </html>
